# finscope

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: REPORT.md  development.md
experiments/: critic_eval.py  critic_eval_cases.json  critic_eval_results.json  generate_charts.py  measure_parallel_speedup.py
monitoring/: langfuse_config.py
scripts/: qa_test.py
src/agents/: analyzer.py  critic.py  graph.py  query_rewriter.py  retriever.py  schemas.py
src/api/: main.py
src/api/core/: config.py
src/ingestion/: base.py  companies_house.py  indexer.py  ingest.py  sec_edgar.py
src/retrieval/: chunker.py  hybrid_retriever.py
tests/: conftest.py
tests/integration/: test_graph_workflow.py
tests/unit/: test_analyzer.py  test_companies_house.py  test_critic.py  test_hybrid_retriever.py  test_retriever.py  test_schemas.py  test_sec_edgar.py
ui/: app.py
