[project]
name = "financial-report-analyst"
version = "0.1.0"
description = "Multi-Agent RAG system for SEC EDGAR & Companies House financial reports"
requires-python = ">=3.11"

dependencies = [
    # Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",

    # Vector DB
    "chromadb>=0.5.0",

    # PDF parsing
    "pdfplumber>=0.11.0",

    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # UI
    "streamlit>=1.40.0",

    # Monitoring
    "langfuse>=2.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
